SERVER-81321: Streams: Fix json deserializer to handle UTF16 escape sequences

GitOrigin-RevId: f5590b31e7b9d9317c34745ed9260cfa0d9aa9fb