src/mongo/db/modules/enterprise/src/streams/exec/tests/json_event_deserializer_test.cpp
@@ -1,0 +1,25 @@
+/**
+ *    Copyright (C) 2023-present MongoDB, Inc.
+ */
+#include "mongo/unittest/assert.h"
+#include "mongo/unittest/framework.h"
+#include "streams/exec/json_event_deserializer.h"
+
+namespace streams {
+namespace {
+
+using namespace mongo;
+
+TEST(JsonEventDeserializerTest, Unicode) {
+    JsonEventDeserializer deserializer;
+    // JSON strings can contain UTF-16 escape sequences, according to
+    // https://datatracker.ietf.org/doc/html/rfc8259#section-7.
+    std::string stringWithUTF16Escapes =
+        R"({ "comment": "\u5b59\u7b11\u5ddd\ud83d\udc74\u5112\ud83e\udd86\u96a8\u548c" })";
+    auto bson =
+        deserializer.deserialize(stringWithUTF16Escapes.c_str(), stringWithUTF16Escapes.length());
+    ASSERT_EQ(std::string{"孙笑川👴儒🦆隨和"}, bson.getStringField("comment").toString());
+}
+
+}  // namespace
+}  // namespace streams
